--- a/style.css
+++ b/style.css
@@ -1,3 +1,77 @@
-.some-style-class {
-  display: none;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.header-background {
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(63,63,76,1) 100%);
+}
+
+.header-layout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 5px;
+}
+
+.photo {
+  padding: 10px;
+  max-width: 100%;
+  height: 400px;
+  text-align: center;
+}
+
+@media (max-width: 1000px)
+{
+  .photo {
+    height: 350px;
+  }
+}
+@media (max-width: 750px)
+{
+  .photo {
+    height: 300px;
+  }
+}
+@media (max-width: 500px)
+{
+  .photo {
+    height: 250px;
+  }
+}
+
+
+
+.photo img {
+  height: 100%;
+  width: 100%;
+  object-position: center;
+  object-fit: cover;
+}
+
+.header-layout .data-container{
+  padding: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #FEFEFE;
 }
