--- a/style.css
+++ b/style.css
@@ -2,6 +2,35 @@
   box-sizing: border-box;
 }
 
+/* Sizes for material icons */
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+
+/* Aligning material icons with text */
+.material-icons.align{
+  vertical-align: bottom;
+}
+
+.custom-icons {
+  vertical-align: bottom;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-color: #FEFEFE;
+}
+
+.custom-icons.discord {
+  -webkit-mask: url("./assets/icons/icons8-discord.svg") 50% 50%/contain no-repeat;
+  mask: url("./assets/icons/icons8-discord.svg") 50% 50%/contain no-repeat;
+}
+
+.custom-icons.github {
+  -webkit-mask: url("./assets/icons/icons8-github.svg") 50% 50%/contain no-repeat;
+  mask: url("./assets/icons/icons8-github.svg") 50% 50%/contain no-repeat;
+}
+
 body {
   min-height: 100vh;
   display: flex;
@@ -12,6 +41,7 @@ body {
   padding-top: 0;
   padding-bottom: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 18px;
 }
 
 .container {
@@ -36,26 +66,22 @@ body {
 .photo {
   padding: 10px;
   max-width: 100%;
-  height: 400px;
+  height: 300px;
+  min-width: 400px;
   text-align: center;
 }
 
 @media (max-width: 1000px)
 {
   .photo {
-    height: 350px;
+    height: 250px;
   }
 }
 @media (max-width: 750px)
 {
   .photo {
-    height: 300px;
-  }
-}
-@media (max-width: 500px)
-{
-  .photo {
-    height: 250px;
+    height: 200px;
+    min-width: 60vw;
   }
 }
 
@@ -66,12 +92,52 @@ body {
   width: 100%;
   object-position: center;
   object-fit: cover;
+  filter: grayscale(30%);
 }
 
 .header-layout .data-container{
-  padding: 10%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: #FEFEFE;
+}
+.name-container {
+  border-bottom: 5px solid gray;
+}
+.name-container h1 {
+  font-size: 72px;
+  line-height: 72px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.contact-container {
+
+}
+
+.contact-container ul {
+  list-style: none;
+}
+
+.contact-container ul li {
+  margin-bottom: 5px;
+}
+
+
+.contact-container a {
+  color: inherit;
+  text-decoration: none;
+}
+
+@media (min-width: 500px)
+{
+  .contact-container ul {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    -moz-column-gap: 20px;
+    -webkit-column-gap: 20px;
+    column-gap: 20px;
+  }
 }
