--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   padding-bottom: 0;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
+  background-color: #F0F0F0;
 }
 
 .container {
@@ -141,3 +142,57 @@ body {
     column-gap: 20px;
   }
 }
+
+.main-layout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 20px;
+}
+
+@media (min-width: 500px) {
+  .main-layout section {
+    width: calc(50% - 10px);
+  }
+}
+
+ul.dated-list {
+  list-style: none;
+  padding-left: 10px;
+}
+
+ul.dated-list li {
+  margin-bottom: 5%;
+  display: flex;
+  justify-content: space-evenly;
+}
+ul.dated-list li:before {
+  content: attr(data-dates);
+  flex-basis: 30%;
+  margin-right: 5%;
+  font-weight: bolder;
+}
+
+ul.timeline {
+  list-style: none;
+  padding-left: 10px;
+}
+
+ul.timeline li {
+  border-left: 3px solid black;
+  padding-left: 15px;
+  padding-bottom: 10px;
+}
+ul.timeline li:before {
+  content: "";
+  margin-left: -23.5px;
+  margin-right: 8px;
+  display: inline-block;
+  background-color: #FFF;
+  width: 10px;
+  height: 10px;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+
