--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   display: inline-block;
   width: 24px;
   height: 24px;
-  background-color: #FEFEFE;
+  background-color: #F8F6F1;
 }
 
 .custom-icons.discord {
@@ -31,23 +31,44 @@
   mask: url("./assets/icons/icons8-github.svg") 50% 50%/contain no-repeat;
 }
 
+.custom-icons.dark {
+  background-color: #010101;
+}
+
+.logo-container {
+  background-color: #F8F6F1;
+}
+
+.rss-svg-logo {
+  display: inline-block;
+  height: 55.5px;
+  width: 150px;
+  background: url("./assets/img/rs_school_js.svg") no-repeat;
+}
+
 body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 0;
   padding-bottom: 0;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
-  background-color: #F0F0F0;
+  background-color: #F8F6F1;
 }
 
 .container {
   max-width: 1440px;
   margin: 0 auto;
+}
+
+/* Overwrite generic link style in all containers*/
+.container a{
+  color: #456990;
+  text-decoration: none;
 }
 
 .header-background {
@@ -101,7 +122,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: #FEFEFE;
+  color: #F8F6F1;
 }
 .name-container {
   border-bottom: 5px solid gray;
@@ -189,7 +210,7 @@ ul.timeline li:before {
   margin-left: -23.5px;
   margin-right: 8px;
   display: inline-block;
-  background-color: #FFF;
+  background-color: #F8F6F1;
   width: 10px;
   height: 10px;
   border: 2px solid black;
@@ -207,8 +228,38 @@ ul.tag-list {
 
 ul.tag-list li {
   background-color: lightslategray;
-  color: #FEFEFE;
+  color: #F8F6F1;
   border-radius: 15px;
   padding: 5px;
 }
+
+.code-container {
+  white-space: normal;
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(63,63,76,1) 100%);
+  color: #F8F6F1;
+}
+
+.code-container code {
+  white-space: pre-wrap;
+}
+
+/* Move footer to bottom of the screen*/
+body footer {
+  margin-top: auto;
+}
+
+.footer-layout {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+.footer-layout .data-container{
+  color: #F8F6F1;
+}
+
+
 
