--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Sizes for material icons */
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
@@ -35,16 +39,7 @@
   background-color: #010101;
 }
 
-.logo-container {
-  background-color: #F8F6F1;
-}
 
-.rss-svg-logo {
-  display: inline-block;
-  height: 55.5px;
-  width: 150px;
-  background: url("./assets/img/rs_school_js.svg") no-repeat;
-}
 
 body {
   min-height: 100vh;
@@ -69,11 +64,78 @@ body {
 .container a{
   color: #456990;
   text-decoration: none;
+  transition: 0.3s;
+}
+.container a:hover {
+  padding: 0 10px;
+  display: inline-block;
+  background-color: #456990;
+  border-radius: 5px;
+  color: #F8F6F1;
+  transition: 0.3s;
+}
+.container a:hover .custom-icons{
+  background-color: #F8F6F1;
+  transition: 0.3s;
+}
+
+.logo-container {
+  background-color: #F8F6F1;
+  transition: 0.3s;
+}
+
+.logo-container:hover {
+  padding: 0 10px;
+  transition: 0.3s;
+}
+
+.rss-svg-logo {
+  display: inline-block;
+  height: 55.5px;
+  width: 150px;
+  background: url("./assets/img/rs_school_js.svg") no-repeat;
+  transition: 0.3s;
+}
+a.rss-svg-logo:hover{
+  background-color: #F8F6F1;
+  transition: 0.3s;
 }
 
 .header-background {
   background: rgb(0,0,0);
   background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(63,63,76,1) 100%);
+}
+
+.header-layout-nav {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.nav .nav-list{
+  padding: 0 10px;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+}
+
+a.nav-link {
+  color: #F8F6F1;
+  padding: 0 20px;
+  line-height: 24px;
+}
+
+a.nav-link:hover {
+  display: inline-block;
+  padding: 0 20px;
+  background-color: #F8F6F1;
+  border-radius: 5px;
+  color: #000000;
+  transition: 0.3s;
 }
 
 .header-layout {
@@ -107,8 +169,6 @@ body {
   }
 }
 
-
-
 .photo img {
   height: 100%;
   width: 100%;
@@ -119,6 +179,7 @@ body {
 
 .header-layout .data-container{
   padding: 20px;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -126,16 +187,14 @@ body {
 }
 .name-container {
   border-bottom: 5px solid gray;
+  width: 100%;
 }
 .name-container h1 {
+  overflow: hidden;
   font-size: 72px;
   line-height: 72px;
   margin-bottom: 10px;
   margin-top: 10px;
-}
-
-.contact-container {
-
 }
 
 .contact-container ul {
@@ -150,6 +209,19 @@ body {
 .contact-container a {
   color: inherit;
   text-decoration: none;
+}
+
+.contact-container a:hover {
+  padding: 0 10px;
+  display: inline-block;
+  background-color: #F8F6F1;
+  border-radius: 5px;
+  color: #000000;
+  transition: 0.3s;
+}
+.contact-container a:hover .custom-icons {
+  background-color: #000000;
+  transition: 0.3s;
 }
 
 @media (min-width: 500px)
@@ -170,6 +242,10 @@ body {
   flex-wrap: wrap;
   padding: 10px;
   gap: 20px;
+}
+
+.main-layout section{
+  width: 100%;
 }
 
 @media (min-width: 500px) {
@@ -234,14 +310,22 @@ ul.tag-list li {
 }
 
 .code-container {
+  margin: 0;
+  width: 100%;
+  overflow: scroll;
   white-space: normal;
   background: rgb(0,0,0);
   background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(63,63,76,1) 100%);
   color: #F8F6F1;
 }
 
+.code-container::-webkit-scrollbar{
+  display: none;
+}
+
+
 .code-container code {
-  white-space: pre-wrap;
+  white-space: pre;
 }
 
 /* Move footer to bottom of the screen*/
@@ -252,6 +336,7 @@ body footer {
 .footer-layout {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
   padding: 20px;
