--- a/style.css
+++ b/style.css
@@ -123,6 +123,14 @@ a.rss-svg-logo:hover{
   justify-content: flex-end;
 }
 
+@media (max-width: 799px) {
+  .nav .nav-list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+}
+
 a.nav-link {
   color: #F8F6F1;
   padding: 0 20px;
